Implementar pruebas para desarrollo

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=Sistema Financiero Less
+spring.datasource.url=jdbc:mysql://localhost:3306/sistema_financiero
+spring.datasource.username=root
+spring.datasource.password=rootpassword
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+
+# Configuración de JPA
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
