--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 # Configuración de JPA
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+spring.resources.static-locations=classpath:/static/, classpath:/public/
+spring.resources.static-locations=classpath:/static/
