--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,23 +1,10 @@
-spring.application.name=Sistema Financiero Less
-spring.datasource.url=jdbc:mysql://localhost:3306/sistema_financiero
+spring.datasource.url=jdbc:mysql://localhost:3307/sistemaFinanciero
 spring.datasource.username=root
-spring.datasource.password=rootpassword
-spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.password=root
 
-# Configuración de JPA
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-#spring.resources.static-locations=classpath:/static/, classpath:/public/
-#spring.resources.static-locations=classpath:/static/
-
-
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=root
-spring.datasource.password=
-
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.h2.console.enabled=true
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+#desactivar renombramiento automático - Hibernate
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
