--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
-spring.datasource.url=jdbc:mysql://localhost:3307/sistemaFinanciero
+spring.datasource.url=jdbc:mysql://localhost:3307/banco_db
 spring.datasource.username=root
 spring.datasource.password=root
+
+#puerto para la pagina
+server.port=8080
 
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
