fix: modificar enlaces entre vistas y puerto

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,8 @@ spring.datasource.password=root
 
 #puerto para la pagina
 server.port=8080
+#no incluir 8080 el puerto en redirecciones
+server.forward-headers-strategy=framework
 
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
