fix: Corregir y optimizar codigo

--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,12 @@
 			<artifactId>mysql-connector-j</artifactId>
 		</dependency>
 
+    	<!-- Dependencia para SLF4J y Logback - Logger-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-logging</artifactId>
+		</dependency>
+
     </dependencies>
 
 	<build>
