--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,7 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 
 #spring security - Contraseña estatica
 spring.security.user.password=root
+
+#JWT
+jwt.secret.key=68647B987445C949FFCBDC4456F3A
+jwt.time.expiration=3600000
