--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,7 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 
 #spring security - Contraseña estatica
 spring.security.user.password=root
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
 
 #JWT
 jwt.secret.key=FF4RvfwG5+t4lO2UK+rLp6TB4lTTPs3IlQdDEZ8L8ec=
